--- a/manifest.json
+++ b/manifest.json
@@ -42,7 +42,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wxab32f072f41de073",
+        "appid" : "wx371b4ef6dce4f827",
         "setting" : {
             "urlCheck" : true,
             "es6" : true,
